template/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_w000001_name": {
            "defaultValue": "w000001",
            "type": "String"
        },
        "storageAccounts_clopez01_name": {
            "defaultValue": "clopez01",
            "type": "String"
        },
        "virtualNetworks_RG_01_vnet_name": {
            "defaultValue": "RG-01-vnet",
            "type": "String"
        },
        "networkInterfaces_w000001296_name": {
            "defaultValue": "w000001296",
            "type": "String"
        },
        "publicIPAddresses_w000001_ip_name": {
            "defaultValue": "w000001-ip",
            "type": "String"
        },
        "networkSecurityGroups_w000001_nsg_name": {
            "defaultValue": "w000001-nsg",
            "type": "String"
        },
        "subnets_default_name": {
            "defaultValue": "default",
            "type": "String"
        },
        "securityRules_AllowRDP_3389_name": {
            "defaultValue": "AllowRDP_3389",
            "type": "String"
        },
        "virtualMachines_w000001_id": {
            "defaultValue": "/subscriptions/b2fe62f4-8707-4df4-8c2d-088020515af0/resourceGroups/RG-01/providers/Microsoft.Compute/disks/w000001_OsDisk_1_12a9dc52244044b3aeb362d90f47e495",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/b2fe62f4-8707-4df4-8c2d-088020515af0/resourceGroups/RG-01/providers/Microsoft.Compute/virtualMachines/w000001'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_w000001_name')]",
            "apiVersion": "2018-06-01",
            "location": "centralus",
            "tags": {},
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B1s"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(parameters('virtualMachines_w000001_name'),'_OsDisk_1_12a9dc52244044b3aeb362d90f47e495')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "id": "[parameters('virtualMachines_w000001_id')]"
                        }
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_w000001_name')]",
                    "adminUsername": "clopez",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": [],
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_w000001296_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https', '://', parameters('storageAccounts_clopez01_name'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_w000001296_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_clopez01_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b2fe62f4-8707-4df4-8c2d-088020515af0/resourceGroups/RG-01/providers/Microsoft.Network/networkInterfaces/w000001296'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_w000001296_name')]",
            "apiVersion": "2018-08-01",
            "location": "centralus",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "ffdf1e3e-89c4-4f1d-8e05-85a3a739816d",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"ceb92e84-bde2-4bf6-b30e-a83a69ab98c0\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_w000001_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_RG_01_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_w000001_nsg_name'))]"
                },
                "primary": true,
                "tapConfigurations": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_w000001_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_RG_01_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_w000001_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b2fe62f4-8707-4df4-8c2d-088020515af0/resourceGroups/RG-01/providers/Microsoft.Network/networkSecurityGroups/w000001-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_w000001_nsg_name')]",
            "apiVersion": "2018-08-01",
            "location": "centralus",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "79da5370-8b85-4dae-83c3-ba80076ccae4",
                "securityRules": [
                    {
                        "name": "AllowRDP_3389",
                        "etag": "W/\"deafa5d7-4740-442e-ae49-5199db4d6cf0\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow connection using RDP",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"deafa5d7-4740-442e-ae49-5199db4d6cf0\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"deafa5d7-4740-442e-ae49-5199db4d6cf0\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"deafa5d7-4740-442e-ae49-5199db4d6cf0\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"deafa5d7-4740-442e-ae49-5199db4d6cf0\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"deafa5d7-4740-442e-ae49-5199db4d6cf0\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"deafa5d7-4740-442e-ae49-5199db4d6cf0\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b2fe62f4-8707-4df4-8c2d-088020515af0/resourceGroups/RG-01/providers/Microsoft.Network/publicIPAddresses/w000001-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_w000001_ip_name')]",
            "apiVersion": "2018-08-01",
            "location": "centralus",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "0dff17e9-f0e7-4dea-bac0-7d1dd1a632a2",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b2fe62f4-8707-4df4-8c2d-088020515af0/resourceGroups/RG-01/providers/Microsoft.Network/virtualNetworks/RG-01-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_RG_01_vnet_name')]",
            "apiVersion": "2018-08-01",
            "location": "centralus",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "41d09aae-c8af-4c42-a6de-facb46dd8203",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"67ebc86f-6eac-4a1a-a800-0dd40b0875e0\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.0.0/24",
                            "delegations": []
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b2fe62f4-8707-4df4-8c2d-088020515af0/resourceGroups/RG-01/providers/Microsoft.Storage/storageAccounts/clopez01'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_clopez01_name')]",
            "apiVersion": "2018-07-01",
            "location": "centralus",
            "tags": {},
            "scale": null,
            "properties": {
                "networkAcls": {
                    "bypass": "AzureServices",
                    "virtualNetworkRules": [],
                    "ipRules": [],
                    "defaultAction": "Allow"
                },
                "supportsHttpsTrafficOnly": false,
                "encryption": {
                    "services": {
                        "file": {
                            "enabled": true
                        },
                        "blob": {
                            "enabled": true
                        }
                    },
                    "keySource": "Microsoft.Storage"
                }
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b2fe62f4-8707-4df4-8c2d-088020515af0/resourceGroups/RG-01/providers/Microsoft.Network/networkSecurityGroups/w000001-nsg/securityRules/AllowRDP_3389'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_w000001_nsg_name'), '/', parameters('securityRules_AllowRDP_3389_name'))]",
            "apiVersion": "2018-08-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow connection using RDP",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_w000001_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/b2fe62f4-8707-4df4-8c2d-088020515af0/resourceGroups/RG-01/providers/Microsoft.Network/virtualNetworks/RG-01-vnet/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_RG_01_vnet_name'), '/', parameters('subnets_default_name'))]",
            "apiVersion": "2018-08-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24",
                "delegations": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_RG_01_vnet_name'))]"
            ]
        }
    ]
}
